# CellularAutomata

./: CMakeLists.txt
src/: Main.cpp  World.cpp  World.h
